--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,8 @@
 				"GitHub.copilot-nightly",
 				"GitHub.copilot-labs",
 				"ms-azuretools.vscode-docker",
-				"ms-vscode.makefile-tools"
+				"ms-vscode.makefile-tools",
+				"GitHub.copilot"
 			]
 		}
 	},
