--- a/login_services/login/Cargo.toml
+++ b/login_services/login/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "login_services"
+name = "login"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = ["authentication", "login", "login_manager"]
-
+[dependencies]
+authentication = { version = "0.1.0", path = "../authentication" }
